tests/baselines/reference/tsxDynamicTagName3.errors.txt
tests/cases/conformance/jsx/tsxDynamicTagName3.tsx(9,1): error TS2339: Property 'h1' does not exist on type 'JSX.IntrinsicElements'.
tests/cases/conformance/jsx/tsxDynamicTagName3.tsx(9,2): error TS2604: JSX element type 'CustomTag' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/tsxDynamicTagName3.tsx (2 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		div: any
    	}
    }
    
    var CustomTag: "h1" = "h1";
    <CustomTag> Hello World </CustomTag>  // This should be an error. we will try look up string literal type in JSX.IntrinsicElements
    ~~~~~~~~~~~
!!! error TS2339: Property 'h1' does not exist on type 'JSX.IntrinsicElements'.
     ~~~~~~~~~
!!! error TS2604: JSX element type 'CustomTag' does not have any construct or call signatures.